<resources>
    <string name="app_name">杂看</string>
    <string name="app_intro">A pure reading App for you</string>

    //main drawer
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="video">视频</string>
    <string name="news">新闻</string>
    <string name="movie">电影</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_options">选项</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>
    <string name="actionbar_more">更多信息</string>

    <string name="action_copy">复制链接到剪贴板</string>
    <string name="action_save">保存到本地</string>
    <string name="action_share">分享链接</string>
    <string name="action_like">收藏</string>
    <string name="action_search">搜索</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>

    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_channel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <string name="about_addr">项目地址:\nhttps://github.com/codeestX/GeekNews</string>
    <string name="about_author">作者:Wsy\t\t(471993021@qq.com)</string>
    <string name="about_project">项目简介:\n杂看,一个纯粹的阅读App\n为了熟悉当前Android端主流框架的使用,也为了能有一款将新闻、技术文章、福利一网打尽的简洁的阅读应用,利用闲暇时间做了这个项目\n
        本着学习的目的,该项目会持续迭代与优化,加入更丰富的阅读内容与功能,并不断尝试最新的技术,欢迎star、fork、issue、email</string>
    <string name="about_award">请作者吃糖(￣▽￣)</string>
    <string name="about_info">杂看\t\t\tV1.1.0</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="transition_movie_img">transition_movie_img</string>

</resources>
